# chess_engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  run.sh
build_rel/: CMakeCache.txt  Makefile  chess_engine  cmake_install.cmake  compile_commands.json
include/: bitboard.h  board.h  board_list.h  move.h  move_list.h  types.h  uci.h
src/: bitboard.cpp  bitboard.h  board.cpp  board_list.cpp  engine.cpp  engine.h  generator.cpp  generator.h  main.cpp  move.h  move_list.cpp  move_list.h  position.cpp  position.h  search_stats.h  transposition_table.cpp  transposition_table.h  types.h  uci.cpp  uci.h  zobrist.cpp  zobrist.h
test/: auto_perft_test.py  fen_testing_data.csv
